intelmq-mailgen (1.3.8-1) UNRELEASED; urgency=medium

  *

 -- Sebastian Wagner <swagner@intevation.de>  Wed, 30 Apr 2025 17:30:43 +0200

intelmq-mailgen (1.3.7-1) stable; urgency=medium

  * cli interface:
    * do not commit the directive to db if only in preview-mode
    * better error message when format scripts did not generate a notification
    * in Dry runs and debug logging level, also log envelop to addresses if set
  * notifications:
    * allow for different envelope-to than header-to in mail_format_as_csv and EmailNotification
  * Packaging:
    * Add GitHub Workflows to build Debian Package for Debian 11 and Debian 12
    * Fix Build for Debian 12 / Ubuntu 24.04 (#47)
  * Documentation:
    * Include the README in the rendered documentation, converted to RST
    * Add conceptual overview graphics and some texts
    * add database schema visualization
    * convert sql/updates to markdown for readability
  * SQL/Database:
    * Fix script to create Type `ip_endpoint` as superuser
    * use JSONB of events.extra
      IntelMQ's eventdb events.extra switched from type JSON to JSONB:
      https://github.com/certtools/intelmq/pull/2597
      directly use the JSONB type in the functions
  * github workflows:
    * update some actions for compatibility, update runners
    * fix package build script
    * update python versions: remove 3.7, add 3.8-3.13
    * use gpgme from pypi instead of compiling ourself

 -- Sebastian Wagner <swagner@intevation.de>  Wed, 30 Apr 2025 15:03:19 +0200

intelmq-mailgen (1.3.6-1) stable; urgency=medium

  * gnupg: set home dir with parameter, not env variable
  * Documentation:
    * add docs on format specs
    * small fixes
    * render API docs

 -- Sebastian Wagner <swagner@intevation.de>  Fri, 30 Aug 2024 18:54:13 +0200

intelmq-mailgen (1.3.5-2) stable; urgency=medium

  * ScriptContext: Handle self.templates = None and read from directory
    (default with intelmqmail cli interface).
